# Serveur/python-flask-server/swagger_server/controllers/test_data_controller.py
@@ -2,7 +2,7 @@ import connexion
 import six
 
 from swagger_server.models.data import Data  # noqa: E501
-from swagger_server.models.solutions import Solutions  # noqa: E501
+from swagger_server.models.solution import Solution  # noqa: E501
 from swagger_server import util
 
 
@@ -14,7 +14,7 @@ def test_data_master_test_data_test_data(image):  # noqa: E501
     :param image: Data information
     :type image: dict | bytes
 
-    :rtype: Solutions
+    :rtype: Solution
     """
     if connexion.request.is_json:
         image = Data.from_dict(connexion.request.get_json())  # noqa: E501
