# Serveur/python-flask-server/swagger_server/models/__init__.py
@@ -5,7 +5,5 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.data import Data
 from swagger_server.models.data_train import DataTrain
-from swagger_server.models.list_matrix import ListMatrix
 from swagger_server.models.matrix import Matrix
 from swagger_server.models.solution import Solution
-from swagger_server.models.solutions import Solutions
