# Serveur/python-flask-server/swagger_server/models/data_train.py
@@ -7,6 +7,7 @@ from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
 from swagger_server.models.data import Data  # noqa: F401,E501
+from swagger_server.models.solution import Solution  # noqa: F401,E501
 from swagger_server import util
 
 
@@ -16,17 +17,17 @@ class DataTrain(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, data: Data=None, solution: int=None):  # noqa: E501
+    def __init__(self, data: Data=None, solution: Solution=None):  # noqa: E501
         """DataTrain - a model defined in Swagger
 
         :param data: The data of this DataTrain.  # noqa: E501
         :type data: Data
         :param solution: The solution of this DataTrain.  # noqa: E501
-        :type solution: int
+        :type solution: Solution
         """
         self.swagger_types = {
             'data': Data,
-            'solution': int
+            'solution': Solution
         }
 
         self.attribute_map = {
@@ -70,22 +71,22 @@ class DataTrain(Model):
         self._data = data
 
     @property
-    def solution(self) -> int:
+    def solution(self) -> Solution:
         """Gets the solution of this DataTrain.
 
 
         :return: The solution of this DataTrain.
-        :rtype: int
+        :rtype: Solution
         """
         return self._solution
 
     @solution.setter
-    def solution(self, solution: int):
+    def solution(self, solution: Solution):
         """Sets the solution of this DataTrain.
 
 
         :param solution: The solution of this DataTrain.
-        :type solution: int
+        :type solution: Solution
         """
 
         self._solution = solution
